{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 20,
  "lineage": "1ca388ea-4d24-b074-56d9-73a85ae24f27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "ipnotics_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:657875069774:loadbalancer/ipnow-20220620163013717100000001",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "ipnow-20220620163013717100000001-1187844627.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:50",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ipnow-20220620163013717100000001",
            "idle_timeout": 60,
            "instances": [
              "i-049a9fdd168e0e31e",
              "i-0c35e6d58fb9a78f4"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 50,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ipnow-20220620163013717100000001",
            "name_prefix": "ipnow-",
            "security_groups": [
              "sg-0865e1b04a401f2a1"
            ],
            "source_security_group": "657875069774/ipnotics-sg",
            "source_security_group_id": "sg-0865e1b04a401f2a1",
            "subnets": [
              "subnet-0a741fba1f2395d3f",
              "subnet-0cc4c10800baff0bc"
            ],
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.ipnotics-sg",
            "aws_subnet.pri1",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5094faf16f004eb",
            "arn": "arn:aws:ec2:eu-west-3:657875069774:instance/i-0c35e6d58fb9a78f4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c35e6d58fb9a78f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0627cb9d68e1f9b86",
            "private_dns": "ip-10-0-10-235.eu-west-3.compute.internal",
            "private_ip": "10.0.10.235",
            "public_ip": "35.181.65.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b249cee624794904",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0793834af25c8811e",
            "tags": {
              "Name": "pro-webservers"
            },
            "tags_all": {
              "Name": "pro-webservers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0865e1b04a401f2a1"
            ]
          },
          "dependencies": [
            "aws_security_group.ipnotics-sg",
            "aws_subnet.pri1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5094faf16f004eb",
            "arn": "arn:aws:ec2:eu-west-3:657875069774:instance/i-049a9fdd168e0e31e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049a9fdd168e0e31e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da083f8a29404053",
            "private_dns": "ip-10-0-10-39.eu-west-3.compute.internal",
            "private_ip": "10.0.10.39",
            "public_ip": "13.38.79.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07f3963831d21bfeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0793834af25c8811e",
            "tags": {
              "Name": "pro-webservers"
            },
            "tags_all": {
              "Name": "pro-webservers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0865e1b04a401f2a1"
            ]
          },
          "dependencies": [
            "aws_security_group.ipnotics-sg",
            "aws_subnet.pri1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:internet-gateway/igw-05c4793b17ae77216",
            "id": "igw-05c4793b17ae77216",
            "owner_id": "657875069774",
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c4793b17ae77216",
            "id": "r-rtb-065fe8cbc5fc68cf01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065fe8cbc5fc68cf0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ami_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:security-group/sg-06a5988835ff0e23f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a5988835ff0e23f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0865e1b04a401f2a1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ami_sg",
            "name_prefix": "",
            "owner_id": "657875069774",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ipnotics-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ipnotics-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:security-group/sg-0865e1b04a401f2a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0865e1b04a401f2a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ipnotics-sg",
            "name_prefix": "",
            "owner_id": "657875069774",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:subnet/subnet-0793834af25c8811e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0793834af25c8811e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657875069774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri1"
            },
            "tags_all": {
              "Name": "pri1"
            },
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:subnet/subnet-09a1f70a858e48fc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a1f70a858e48fc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657875069774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri2"
            },
            "tags_all": {
              "Name": "pri2"
            },
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:subnet/subnet-0cc4c10800baff0bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc4c10800baff0bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657875069774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub1"
            },
            "tags_all": {
              "Name": "pub1"
            },
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:subnet/subnet-0a741fba1f2395d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a741fba1f2395d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657875069774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub2"
            },
            "tags_all": {
              "Name": "pub2"
            },
            "vpc_id": "vpc-084737263e2d83fe6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:657875069774:vpc/vpc-084737263e2d83fe6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0205a44e8a38e4e2b",
            "default_route_table_id": "rtb-065fe8cbc5fc68cf0",
            "default_security_group_id": "sg-0189bdf21eddf7bdc",
            "dhcp_options_id": "dopt-0b56865ebf985884e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-084737263e2d83fe6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065fe8cbc5fc68cf0",
            "owner_id": "657875069774",
            "tags": {
              "Name": "ipnotics"
            },
            "tags_all": {
              "Name": "ipnotics"
            }
          }
        }
      ]
    }
  ]
}